# flops-tracker

./: .gitignore  README.md  cnn_flops_batch.csv  cnn_flops_epoch.csv  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml  sgd_flops_batch.csv  sgd_flops_epoch.csv
examples/: hf_bert_cls.py  hf_gpt2_lm.py  sklearn_sgd_example.py  torch_auto_dataparallel.py  torch_cnn_example.py
flops_tracker/: __init__.py  tracker.py
flops_tracker/estimators/: __init__.py  base.py  sklearn_sgd.py  torch_auto.py  torch_cnn.py
hf/: adapters.py
